# CircuitPython_DiscordAPI

./: LICENSE  README.rst  README.rst.license  discordapi.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: conf.py  index.rst
examples/: discordapi_simpletest.py
